# external-logger-service

./: Cargo.toml  README.md  example.env
src/: config.rs  errors.rs  main.rs  models.rs
src/ingest/: ingestor.rs
src/storage/: mod.rs  redis_handler.rs
src/tests/: common.rs  ingestor.rs  mod.rs
src/validation/: mod.rs  validate.rs
src/ws/: mod.rs  ws_handler.rs
