[package]
name = "external-logger-service"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
axum = { version = "0.8.8", features = ["ws", "macros"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
thiserror = "2.0.18"
anyhow = "1.0.102"
dotenvy = "0.15.7"
redis = { version = "1.1.0", features = [
    "tokio-comp",
    "aio",
    "streams",
    "connection-manager",
] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
axum-test = "19.1.1"
